--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>幹事用ページ - 魚や一丁</title>
-    <link rel="stylesheet" href="organizer-script.js" />
+    <link rel="stylesheet" href="organizer-script.css" />
   </head>
   <body>
     <p class="budget-info">
